<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.hunterstrategy</groupId>
    <artifactId>jnfs-git</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <name>java.nio FileSystem - git</name>
    <description>A java.nio.FileSystem implementation that walks git trees at specific revisions.</description>
    <url>https://github.com/hunterstrategy/java-filesystem-git</url>

    <organization>
        <name>Hunter Strategy LLC</name>
        <url>https://hunterstrategy.net/</url>
    </organization>
    <inceptionYear>2022</inceptionYear>
    <licenses>
        <license>
            <name>LGPL-3.0-or-later</name>
            <url>https://www.gnu.org/licenses/lgpl.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/hunterstrategy/java-filesystem-git/tree/main</url>
        <connection>scm:git:git://github.com:hunterstrategy/java-filesystem-git.git</connection>
        <developerConnection>scm:git:ssh://github.com:hunterstrategy/java-filesystem-git.git</developerConnection>
    </scm>

    <distributionManagement>
        <repository>
            <id>ossrh</id>
            <name>Nexus Release Repository</name>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <developers>
        <developer>
            <name>Hunter Strategy</name>
            <email>contact@hunterstrategy.net</email>
            <organization>Hunter Strategy</organization>
            <organizationUrl>http://www.hunterstrategy.net</organizationUrl>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <mdoclet.version>2.2.0</mdoclet.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.github.jnr</groupId>
            <artifactId>jnr-ffi</artifactId>
            <version>2.2.13</version>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.2</version>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.8</version>
                </plugin>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>2.27.2</version>
                    <dependencies>
                        <dependency>
                            <groupId>com.palantir.javaformat</groupId>
                            <artifactId>palantir-java-format</artifactId>
                            <version>[2.28.0,)</version>
                        </dependency>
                    </dependencies>
                </plugin>
                
                <!--This plugin's configuration is used to store Eclipse m2e settings only.
                    It has no influence on the Maven build itself. -->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>
                                            com.diffplug.spotless
                                        </groupId>
                                        <artifactId>
                                            spotless-maven-plugin
                                        </artifactId>
                                        <versionRange>
                                            [2.27.2,)
                                        </versionRange>
                                        <goals>
                                            <goal>check</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore/>
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>jdk-version</id>
            <activation>
                <activeByDefault>false</activeByDefault>
                <jdk>[17,)</jdk>
            </activation>
            <properties>
                <mdoclet.version>3.1.0</mdoclet.version>
            </properties>
        </profile>
        <profile>
            <id>release</id>
            <activation>
                <activeByDefault>false</activeByDefault>
                <property>
                    <name>env.RELEASE</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <doclet>org.jdrupes.mdoclet.MDoclet</doclet>
                            <docletArtifact>
                                <groupId>org.jdrupes.mdoclet</groupId>
                                <artifactId>doclet</artifactId>
                                <version>${mdoclet.version}</version>
                            </docletArtifact>
                            <additionalJOptions>
                                <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
                                <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
                            </additionalJOptions>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.5</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
       <profile>
            <id>auto-java</id>
            <activation>
                <file>
                    <exists>src/main/java</exists>
                </file>
            </activation>
            <dependencies>
                <!-- Add JUnit5 for testing -->
                <dependency>
                    <groupId>org.junit.jupiter</groupId>
                    <artifactId>junit-jupiter</artifactId>
                    <version>5.9.1</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.easymock</groupId>
                    <artifactId>easymock</artifactId>
                    <version>5.0.1</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <properties>
                                <!-- Enable parallel tests, using the number of cores
                                     Run each test class in its own thread, and use the same
                                     thread for all the methods of each class.
                                     This configuration provides a good compromise between compat
                                     with test execution safety of other test systems while also
                                     allowing for parallel execution. -->
                                <configurationParameters>
                                    junit.jupiter.execution.parallel.enabled = true
                                    junit.jupiter.execution.parallel.config.strategy = dynamic
                                    junit.jupiter.execution.parallel.mode.default = same_thread
                                    junit.jupiter.execution.parallel.mode.classes.default = concurrent
                                </configurationParameters>
                            </properties>
                        </configuration>
                    </plugin>
                    <!-- Spotless Plugin with Palantir Java Format -->
                    <plugin>
                        <groupId>com.diffplug.spotless</groupId>
                        <artifactId>spotless-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                                <phase>process-sources</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <java>
                                <palantirJavaFormat/>
                                <formatAnnotations/>
                                <importOrder/>
                            </java>
                        </configuration>
                    </plugin>

                    <!-- JaCoCo code coverage requirement -->
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <configuration>
                            <excludes>
                                <exclude>META-INF/**</exclude>
                            </excludes>
                        </configuration>
                        <executions>
                            <execution>
                                <id>jacoco-prepare</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>jacoco-check</id>
                                <goals>
                                    <goal>report</goal>
                                    <goal>check</goal>
                                </goals>
                                <configuration>
                                    <rules>
                                        <rule>
                                            <element>PACKAGE</element>
                                            <includes>
                                                <include>net.hunterstrategy.jnfsgit</include>
                                                <include>net.hunterstrategy.jnfsgit.**</include>
                                            </includes>
                                            <limits>
                                                <limit>
                                                    <counter>LINE</counter>
                                                    <value>COVEREDRATIO</value>
                                                    <minimum>0.80</minimum>
                                                </limit>
                                                <limit>
                                                    <counter>BRANCH</counter>
                                                    <value>COVEREDRATIO</value>
                                                    <minimum>0.80</minimum>
                                                </limit>
                                            </limits>
                                        </rule>
                                        <!-- relax libgit2 binding coverage requirements
                                             for the time being. should be increased
                                             if the bindings become a serious independent
                                             project -->
                                        <rule>
                                            <element>PACKAGE</element>
                                            <includes>
                                                <include>net.hunterstrategy.libgit2**</include>
                                            </includes>
                                            <limits>
                                                <limit>
                                                    <counter>LINE</counter>
                                                    <value>COVEREDRATIO</value>
                                                    <minimum>0.50</minimum>
                                                </limit>
                                                <limit>
                                                    <counter>BRANCH</counter>
                                                    <value>COVEREDRATIO</value>
                                                    <minimum>0.45</minimum>
                                                </limit>
                                            </limits>
                                        </rule>
                                    </rules>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
